Oss-attributes: Fix line overflow

--- a/app/styles/atoms/attribute.less
+++ b/app/styles/atoms/attribute.less
@@ -29,6 +29,9 @@
   &__value {
     color: var(--color-gray-900);
     flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &:hover {
